--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -1,20 +1,27 @@
 .container {
   position: absolute;
-  border: 1px solid black;
+  border: 1px solid var(--text-green);
   display: flex;
   flex-direction: column;
   left: 0;
   top: 85px;
   height: 80%;
+  padding: 0px 20px;
 }
 
 .navs {
   height: 90%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  color: var(--text-green);
+  font-size: 25px;
 }
 
 .logout {
   cursor: pointer;
+  font-size: 25px;
 }
