--- a/src/features/todos/Todos.module.css
+++ b/src/features/todos/Todos.module.css
@@ -7,25 +7,47 @@
 }
 
 .scheduleContainer {
-  border: 1px solid black;
+  border: 1px solid var(--text-green);
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 15px 30px;
+  padding: 15px 40px;
   width: 600px;
   height: 550px;
   border-radius: 5%;
 }
 
 .addTodoContainer {
-  border: 1px solid black;
-  margin: 20px 0;
+  margin-top: 20px;
+  margin-bottom: 50px;
+  display: flex;
+  align-items: center;
+  padding: 5px 10px;
+  gap: 20px;
+}
+
+.addTodoInput {
+  outline: none;
+  font-size: 20px;
+  background-color: black;
+  border: none;
+  color: var(--text-green);
+  border-bottom: 1px solid var(--text-green);
+  padding: 0px 5px;
+  height: 28px;
+}
+
+.addTodoBtn {
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .todosList {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
   width: 100%;
   height: 100%;
   overflow-y: scroll;
@@ -41,13 +63,12 @@
   height: auto;
   margin-bottom: 10px;
   padding: 0 10px;
-  border: 1px solid black;
 }
 
 .status {
-  border: 1px solid black;
-  width: 15px;
-  height: 15px;
+  border: 1px solid var(--text-green);
+  width: 18px;
+  height: 18px;
   border-radius: 100%;
   cursor: pointer;
   display: flex;
@@ -57,13 +78,13 @@
 }
 
 .description {
-  border: 1px solid black;
   width: 80%;
   height: auto;
+  white-space: pre-wrap;
+  cursor: default;
 }
 
 .settings {
-  border: 1px solid black;
   position: relative;
   height: 100%;
   display: flex;
@@ -72,11 +93,11 @@
 
 .settingsIconContainer {
   cursor: pointer;
-  height: auto;
+  height: 35px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 35px;
+  font-size: 30px;
 }
 
 .settingsIcon {
@@ -93,7 +114,7 @@
   transform: translateY(-50%);
   right: 100%;
   z-index: 10;
-  background-color: grey;
+  border-right: none;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -115,7 +136,7 @@
 }
 
 .editContainer {
-  border: 1px solid black;
+  border: 1px solid var(--text-green);
   width: 80%;
   height: 90%;
 }
