--- a/src/components/AuthPage.module.css
+++ b/src/components/AuthPage.module.css
@@ -1,3 +1,12 @@
+.backToLanding {
+  position: absolute;
+  top: 20px;
+  left: 10px;
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
 .container {
   position: absolute;
   top: 50%;
@@ -46,4 +55,16 @@
   border-left: 1px solid var(--text-green);
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
+}
+
+@media only screen and (min-width: 1441px) {
+  .toggleLogin {
+    width: 150px;
+    font-size: 30px;
+  }
+
+  .toggleRegister {
+    width: 150px;
+    font-size: 30px;
+  }
 }
