--- a/src/features/progress/ProgressPage.module.css
+++ b/src/features/progress/ProgressPage.module.css
@@ -1,17 +1,20 @@
 .container {
-  width: 900px;
   height: 100vh;
-  margin: auto;
+  max-height: 100vh;
+  overflow: hidden;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 20px;
-  border: 1px solid black;
 }
 
 .nodata {
   position: absolute;
-  font-size: 20px;
+  top: 58%;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,15 +24,72 @@
 .options {
   display: flex; 
   width: auto;
+  height: auto;
 }
 
 .option {
-  cursor: "pointer"; 
-  width: "100px"; 
-  padding: "2px 0px"; 
-  border: "1px solid black";
-  display: "flex"; 
-  justify-content: "center"; 
-  align-items: "center";
-  font-size: "14px";
+  cursor: pointer; 
+  width: 100px; 
+  padding: 2px 0px; 
+  border: 1px solid var(--text-green);
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+  font-size: 14px;
+  margin-top: 20px;
+}
+
+.activeOption {
+  background-color: var(--text-green);
+  color: black;
+  font-weight: bolder;
+}
+
+.day {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.month {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+
+@media only screen and (max-width: 425px) {
+  .barchart {
+    width: 100%;
+  }
+
+  .option {
+    width: 70px; 
+    font-size: 10px;
+  }
+
+  .nodata {
+    font-size: 16px;
+  }
+
+  .nodata .nodataDescription {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 426px) {
+  .barchart {
+    padding: 0 20px;
+  }
+
+  .option {
+    width: 100px; 
+    font-size: 16px;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  .barchart {
+    padding: 0 80px;
+    max-width: 1024px;
+    max-height: 500px;
+  }
 }
