--- a/src/features/todos/Todos.module.css
+++ b/src/features/todos/Todos.module.css
@@ -1,6 +1,7 @@
 .container {
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,12 +14,25 @@
   align-items: center;
   padding: 15px 40px;
   width: 600px;
-  height: 550px;
+  height: 700px;
   border-radius: 5%;
 }
 
+.todayContainer {
+  width: 100%;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+}
+
+.today {
+  padding: 5px 50px;
+  border-bottom: 1px solid var(--text-green);
+}
+
 .addTodoContainer {
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 50px;
   display: flex;
   align-items: center;
@@ -32,9 +46,10 @@
   background-color: black;
   border: none;
   color: var(--text-green);
-  border-bottom: 1px solid var(--text-green);
+  border-bottom: 0.5px solid var(--text-green);
   padding: 0px 5px;
   height: 28px;
+  max-width: 250px;
 }
 
 .addTodoBtn {
@@ -62,7 +77,6 @@
   width: 100%;
   height: auto;
   margin-bottom: 10px;
-  padding: 0 10px;
 }
 
 .status {
@@ -75,6 +89,7 @@
   align-items: center;
   justify-content: center;
   font-size: 20px;
+  margin-right: 10px;
 }
 
 .description {
@@ -89,6 +104,7 @@
   height: 100%;
   display: flex;
   align-items: center;
+  margin-left: 10px;
 }
 
 .settingsIconContainer {
@@ -148,3 +164,27 @@
   outline: none;
 }
 
+@media only screen and (max-width: 425px) {
+  .scheduleContainer {
+    padding: 15px 10px;
+    width: 100vw;
+    max-width: 375px;
+    height: 500px;
+  }
+}
+
+@media only screen and (min-width: 426px) {
+  .scheduleContainer {
+    padding: 15px 10px;
+    width: 100vw;
+    max-width: 450px;
+    height: 600px;
+  }
+}
+
+@media only screen and (min-width: 1025px) {
+  .scheduleContainer {
+    max-width: 600px;
+    height: 700px;
+  }
+}
