--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,12 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.suspense_fallback {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
