added loading spinner to login and register buttons, added user login info for testing application

--- a/src/components/Register.module.css
+++ b/src/components/Register.module.css
@@ -58,6 +58,13 @@
   color: var(--text-green);
 }
 
+.loader {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media only screen and (min-width: 1441px) {
   .registerForm {
   
